# qt-ledger

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
include/: mainwindow.h
include/common/: common.h  log.h
log/: log.cpp
src/: common.cpp
